[gd_scene load_steps=12 format=2]

[ext_resource path="res://common/ShadowSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/levels/objects/tex/atlas_arena_objects.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/sfx/_pa/skills/teleport_loop_v2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/textures/glow_light.png" type="Texture" id=4]
[ext_resource path="res://game/levels/objects/BrickLight.gd" type="Script" id=5]
[ext_resource path="res://assets/textures/light_hiter_prehod.png" type="Texture" id=6]

[sub_resource type="PhysicsMaterial" id=7]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ) ]
}

[node name="BrickLight" type="StaticBody2D"]
position = Vector2( 1, 0 )
collision_layer = 5
physics_material_override = SubResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
elevation = 2.0

[node name="BrickShadow" parent="." instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )
shadow_casting_node_path = NodePath("../Sprite")
shadow_color = Color( 0, 0, 0, 0.392157 )

[node name="Light2D" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 4 )
texture_scale = 0.2
color = Color( 1, 1, 1, 0.717647 )
energy = 1.1
range_z_min = 0
range_z_max = 0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.831373, 0.831373, 0.831373, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 48, 8, 8, 8 )

[node name="Cover" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../DetectArea")
anims/RESET = SubResource( 15 )
anims/outro = SubResource( 14 )

[node name="Sounds" type="Node" parent="."]

[node name="MagnetLoop" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "GameSfx"

[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
